...
            .padding(16.dp)
            .verticalScroll(rememberScrollState()),
        verticalArrangement = Arrangement.Center,
        horizontalAlignment = Alignment.CenterHorizontally
    ) {
        // Mostrar un texto con el título
        Text(text = "FUNCION 1", style = MaterialTheme.typography.headlineMedium)
        Spacer(modifier = Modifier.height(16.dp))
        // Campo de texto para ingresar el valor 1
        TextField(
            value = value1,
            onValueChange = { value1 = it },
            label = { Text("Valor 1") }
        )
        Spacer(modifier = Modifier.height(8.dp))
        // Campo de texto para ingresar el valor 2
        TextField(
            value = value2,
            onValueChange = { value2 = it },
            label = { Text("Valor 2") }
        )
        Spacer(modifier = Modifier.height(8.dp))
        // Campo de texto para ingresar el valor 3
        TextField(
            value = value3,
            onValueChange = { value3 = it },
            label = { Text("Valor 3") }
        )
        Spacer(modifier = Modifier.height(16.dp))
        // Botón para mostrar todas las funciones
        Button(onClick = {
            try {
                if (value1.isEmpty() || value2.isEmpty() || value3.isEmpty()) {
...
                }
            } catch (e: NumberFormatException) {
                errorMessage = "Por favor, ingrese valores numéricos válidos."
                showDialog = true
            }
        }) {
            Text("Mostrar TODAS LAS FUNCIONES")
        }
        Spacer(modifier = Modifier.height(16.dp))
        // Mostrar mensaje de error si existe
        errorMessage?.let {
            Text(text = it, color = Color.Red)
        }
...
                values = listOf(value1.toFloat(), value2.toFloat(), value3.toFloat()),
                xLabels = listOf("valor 1", "valor 2", "valor 3"),
                yLabel = "Valores",
                barColors = listOf(color1Func1, color2Func1, color3Func1)
            )
            Spacer(modifier = Modifier.height(25.dp))
            Text(text = "FUNCION 2", style = MaterialTheme.typography.headlineMedium)
            ColorPicker(selectedColor = color1Func2) { color1Func2 = it }
            ColorPicker(selectedColor = color2Func2) { color2Func2 = it }
            ColorPicker(selectedColor = color3Func2) { color3Func2 = it }
            BarChartScreen2(values = listOf(value1.toFloat(), value2.toFloat(), value3.toFloat()), colors = listOf(color1Func2, color2Func2, color3Func2))
            Spacer(modifier = Modifier.height(25.dp))
            Text(text = "FUNCION 3", style = MaterialTheme.typography.headlineMedium)
            ColorPicker(selectedColor = color1Func3) { color1Func3 = it }
            LineChartScreen(values = listOf(value1.toFloat(), value2.toFloat(), value3.toFloat()), colors = listOf(color1Func3, color1Func3, color1Func3))
            Spacer(modifier = Modifier.height(25.dp))
            Text(text = "FUNCION 4", style = MaterialTheme.typography.headlineMedium)
            ColorPicker(selectedColor = color1Func4) { color1Func4 = it }
            ColorPicker(selectedColor = color2Func4) { color2Func4 = it }
            ColorPicker(selectedColor = color3Func4) { color3Func4 = it }
            PieChartScreen(values = listOf(value1.toFloat(), value2.toFloat(), value3.toFloat()), colors = listOf(color1Func4, color2Func4, color3Func4))
            Spacer(modifier = Modifier.height(25.dp))
            Text(text = "FUNCION 5", style = MaterialTheme.typography.headlineMedium)
            ColorPicker(selectedColor = color1Func5) { color1Func5 = it }
            ColorPicker(selectedColor = color2Func5) { color2Func5 = it }
            ColorPicker(selectedColor = color3Func5) { color3Func5 = it }
            CircleChartScreen(values = listOf(value1.toFloat(), value2.toFloat(), value3.toFloat()), colors = listOf(color1Func5, color2Func5, color3Func5))
            Spacer(modifier = Modifier.height(25.dp))
            Text(text = "FUNCION 6", style = MaterialTheme.typography.headlineMedium)
            ColorPicker(selectedColor = color1Func6) { color1Func6 = it }
            ColorPicker(selectedColor = color2Func6) { color2Func6 = it }
            ColorPicker(selectedColor = color3Func6) { color3Func6 = it }
            HalfCircleChartScreen(values = listOf(value1.toFloat(), value2.toFloat(), value3.toFloat()), colors = listOf(color1Func6, color2Func6, color3Func6))
            Spacer(modifier = Modifier.height(25.dp))
            Text(text = "FUNCION 7", style = MaterialTheme.typography.headlineMedium)
            ColorPicker(selectedColor = color1Func7) { color1Func7 = it }
            ColorPicker(selectedColor = color2Func7) { color2Func7 = it }
            ColorPicker(selectedColor = color3Func7) { color3Func7 = it }
            AreaChartScreen(values = listOf(value1.toFloat(), value2.toFloat(), value3.toFloat()), colors = listOf(color1Func7, color2Func7, color3Func7))
        } else {
            // Mostrar solo la función seleccionada
...
